Mobile layout changes: Fix spacing around social section. Add background to social icons

--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,12 @@ footer .content-wrapper {
   width: 55%;
 }
 
-footer .contact {
-  margin-bottom: 50px;
+footer .social {
+  margin: 50px 0;
+}
+
+footer .social h4 {
+  margin: 20px 0;
 }
 
 footer .social-icons {
@@ -220,6 +224,10 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
   font-size: 1.3125rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #527158;
 }
 
 footer .copyright {
